--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 <body>
 <header>
+  <div class="petal"></div>
+<div class="petal"></div>
+<div class="petal"></div>
+<div class="petal"></div>
+<div class="petal"></div>
   <div class="container">
     <nav>
       <strong>Girasoles</strong>
