--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
 <div class="petal"></div>
   <div class="container">
     <nav>
+      <nav>
+  <strong>Girasoles</strong>
+  <div class="links">
+    <a href="index.html" aria-current="page">Inicio</a>
+    <button id="themeToggle" class="theme-toggle" aria-pressed="false" title="Cambiar tema">🌙</button>
+  </div>
+</nav>
       <strong>Girasoles</strong>
       <div class="links">
         <a href="index.html" aria-current="page">Inicio</a>
