--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" href="favicon.svg" type="image/svg+xml">
   <link rel="stylesheet" href="css/style.css"/>
   <script>
-    // Aplicar tema lo antes posible para evitar parpadeo
+    // Evita el parpadeo del tema al cargar
     try {
       var t = localStorage.getItem('theme') || 'dark';
       document.documentElement.setAttribute('data-theme', t);
@@ -36,7 +36,6 @@
   </header>
 
   <main class="container">
-    <!-- Sección principal -->
     <section class="hero card">
       <h1>Perdón por lo ocurrido 🌻</h1>
       <p class="lead">
@@ -45,20 +44,16 @@
       </p>
     </section>
 
-    <!-- Sección de perdón -->
     <section class="card" id="modulo-perdon">
       <h2>¿Me perdonas?</h2>
-
       <div class="choices">
         <button class="btn yes" id="btnYes">Sí 💛</button>
         <button class="btn no" id="btnNo">No…</button>
       </div>
-
       <div id="resultado" class="result" role="status" aria-live="polite"></div>
       <p class="note">Puedes cambiar tu respuesta cuando quieras.</p>
     </section>
 
-    <!-- Sección compromiso -->
     <section class="card tip">
       <h3>Mi compromiso</h3>
       <ul>
