--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>¿Me perdonas? 🌻</title>
   <link rel="icon" href="favicon.svg" type="image/svg+xml">
-  <link rel="stylesheet" href="css/style.css"/>
+  <link rel="stylesheet" href="css/style.css?v=4"/>
   <script>
-    // Evita el parpadeo del tema al cargar
     try {
       var t = localStorage.getItem('theme') || 'dark';
       document.documentElement.setAttribute('data-theme', t);
@@ -17,7 +16,6 @@
 
 <body>
   <header>
-    <!-- pétalos animados -->
     <div class="petal"></div>
     <div class="petal"></div>
     <div class="petal"></div>
@@ -29,7 +27,7 @@
         <strong>Girasoles</strong>
         <div class="links">
           <a href="index.html" aria-current="page">Inicio</a>
-          <button id="themeToggle" class="theme-toggle" aria-pressed="false" title="Cambiar tema">🌙</button>
+          <button id="themeToggle" class="theme-toggle" title="Cambiar tema">🌙</button>
         </div>
       </nav>
     </div>
